production and consumption
